feat: 新增 GC 日志打印